--- a/卡ISO7810ID1规格.md
+++ b/卡ISO7810ID1规格.md
@@ -1,5 +1,5 @@
 # 卡ISO7810ID1规格
-### 矩形尺寸
+### 单面矩形尺寸
 ##### 尺寸
 - 尺寸(长×宽)：`85.6mm`×`54mm`
 - 圆角半径：`3mm`
@@ -8,7 +8,5 @@
 - 半径像素：`35px`
 
 ### 正反面打印模板尺寸
-##### 尺寸
-- 尺寸(长×宽)：`85.6mm`×`148.5mm`
 ##### 像素(300dpi)
 - 像素(长×宽)：`1011px`×`1754px`
